feat(system): 实现角色、权限、字典类型和字典项的 CRUD 接口
- 新增 4 个 Controller：RoleController、PermissionController、DictTypeController、DictItemController
- 新增 4 个 PageReqVO：RolePageReqVO、PermissionPageReqVO、DictTypePageReqVO、DictItemPageReqVO
- 更新 Service 接口：pageXxx 方法接受具体的 PageReqVO 参数
- 更新 Service 实现：调用 reqVO.toWrapper() 实现类型安全查询
- 支持类型安全的字段过滤、时间范围查询和排序
- 包含关联接口：角色权限分配、字典类型-字典项查询、权限树

接口统计：
- RoleController: 7 个接口（CRUD + 角色权限关联）
- PermissionController: 6 个接口（CRUD + 权限树）
- DictTypeController: 8 个接口（CRUD + 按 code 查询 + 字典项关联）
- DictItemController: 5 个接口（CRUD）